# streaming-cassava

./: .travis.yml  ChangeLog.md  README.md  cabal.haskell-ci  shell.nix  streaming-cassava.cabal
.github/workflows/: haskell-ci.yml
src/Streaming/: Cassava.hs
test/: roundtrip.hs
