name:                streaming-cassava
version:             0.1.0.0
synopsis:            Cassava support for the streaming library
-- description:
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Data, Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Cassava
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , cassava
                     , mtl
                     , streaming
                     , streaming-bytestring
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite conversions
  type:                exitcode-stdio-1.0
  main-is:             roundtrip.hs
  build-depends:       streaming-cassava
                     , base
                     , hspec == 2.4.*
                     , mtl
                     , QuickCheck
                     , streaming
  hs-source-dirs:      test
  default-language:    Haskell2010
